# HNGi14-DevOps-stage1

./: .gitignore  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt  todos.md
migrations/: env.py
migrations/versions/: 2026_04_21_88441ba73f78_refactor_update_schema_normalize_schema_.py  2026_04_22_cleanup_drop_sample_size_field_from_.py  2d556d0a5e52_create_user_profile_table.py  c264bf5f157e_fix_country_id_field.py  f2bf7e845a02_recreate_user_profile_table.py
scripts/: seed.py
src/app/: main.py
src/app/common/enums/: age_group.py
src/app/common/schemas/: auth.py  schema.py
src/app/common/utils/: country_loader.py  datetime.py  id.py  query_parser.py  time.py
src/app/core/: config.py  exceptions.py
src/app/db/: base_model.py  engine.py  models.py  session.py
src/app/repos/: repos.py
src/app/services/: age_service.py  aggregation_service.py  gender_service.py  nation_service.py  profile_service.py  user_service.py
src/clients/: base.py  exceptions.py  profile.py
src/clients/agify/: client.py
src/clients/genderize/: client.py
src/clients/nationalize/: client.py
